# ensureconda

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE-MIT  MANIFEST.in  README.md  environment.yml  go.mod  go.sum  main.go  mkdocs.yml  mypy.ini  pixi.toml  pyproject.toml  pytest.ini  rever.xsh  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  pre-commit.yml  pythonpackage.yml  release-golang.yml  release.yml  test.yml
changelog/: index.html
ensureconda/: __init__.py  __main__.py  api.py  cli.py  installer.py  resolve.py
go/: build.py  go.mod  go.sum  main.go  test_binaries.py
go/cmd/: .gitignore  ensureconda.go  ensureconda_test.go  install.go  install_test.go  resolve.go
news/: TEMPLATE.md  make-work-with-shim.md  packaging-version.md  restructure.md
search/: search_index.json
src/golang/: build.py  test_binaries.py
src/golang/cmd/: .gitignore  ensureconda.go  install.go  install_test.go  resolve.go
src/python/ensureconda/: __init__.py  __main__.py  api.py  cli.py  installer.py  resolve.py
test/: conftest.py  helpers.py  test_go_binaries.py  test_library.py  test_python_library.py
test/docker-full/: Dockerfile
test/docker-go/: Dockerfile
test/docker-simple/: Dockerfile
