[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    conda_lock/_version.py ALL

[metadata]
name = ensureconda
description = Lightweight bootstrapper for a conda executable
author = Marius van Niekerk
author_email = marius.v.niekerk@gmail.com
url = https://github.com/conda-incubator/ensureconda
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE-MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
    click >= 5.1
    requests >=2
    appdirs
    filelock
python_requires = >=3.6
packages = ensureconda
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.entry_points]
console_scripts =
    conda-lock = conda_lock:main

[sdist]
formats = gztar

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore =
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    tests
    tests/*
    go/*